--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "request_trimmer": "^1.0.0"
   }
 }
