--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.0.13",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "request_trimmer": "^1.0.0"
   }
 }
